--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -72,6 +72,7 @@ jobs:
 
       - name: Load image
         run: |
+          ls -lha /tmp
           docker load --input /tmp/${{ inputs.docker-artifact-name }}
           docker images
 
