--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -89,8 +89,10 @@ jobs:
 
       - name: Load image
         run: |
-          docker load --input /tmp/${{ inputs.docker-artifact-name }}.tar
-          docker images
+          if [[ -e /tmp/${{ inputs.docker-artifact-name }}.tar ]]; then
+              docker load --input /tmp/${{ inputs.docker-artifact-name }}.tar
+              docker images
+          fi
 
       - name: Install foundry
         uses: foundry-rs/foundry-toolchain@v1.3.1
