--- a/core/helpers/config/kurtosis-cdk-node-config.toml.template
+++ b/core/helpers/config/kurtosis-cdk-node-config.toml.template
@@ -5,6 +5,7 @@ AggLayerURL="{{.agglayer_url}}"
 
 ForkId = {{.zkevm_rollup_fork_id}}
 IsValidiumMode = {{.is_cdk_validium}}
+NetworkID = {{.zkevm_rollup_id}}
 
 {{if eq .zkevm_rollup_fork_id "12"}}
 ContractVersions = "banana"
@@ -20,13 +21,10 @@ L2Coinbase =  "{{.zkevm_l2_sequencer_address}}"
 SequencerPrivateKeyPath = "{{or .zkevm_l2_sequencer_keystore_file "/etc/cdk/sequencer.keystore"}}"
 SequencerPrivateKeyPassword  = "{{.zkevm_l2_keystore_password}}"
 
-AggregatorPrivateKeyPath = "{{or .zkevm_l2_aggregator_keystore_file "/etc/cdk/aggregator.keystore"}}"
-AggregatorPrivateKeyPassword  = "{{.zkevm_l2_keystore_password}}"
 SenderProofToL1Addr = "{{.zkevm_l2_agglayer_address}}"   
 polygonBridgeAddr = "{{.zkevm_bridge_address}}" 
 
 WitnessURL = "http://{{.l2_rpc_name}}{{.deployment_suffix}}:{{.zkevm_rpc_http_port}}"
-
 
 # This values can be override directly from genesis.json
 rollupCreationBlockNumber = "{{.zkevm_rollup_manager_block_number}}"
@@ -40,31 +38,16 @@ genesisBlockNumber = "{{.zkevm_rollup_manager_block_number}}"
 	polygonZkEVMAddress = "{{.zkevm_rollup_address}}"
 	
 [L2Config]
-	GlobalExitRootAddr = "{{.zkevm_global_exit_root_address}}"
+	GlobalExitRootAddr = "{{.zkevm_global_exit_root_l2_address}}"
 
 [Log]
 Environment = "development" # "production" or "development"
 Level = "{{.global_log_level}}"
 Outputs = ["stderr"]
-
-[Aggregator]
-        Port = "{{.zkevm_aggregator_port}}"
-        RetryTime = "30s"
-        VerifyProofInterval = "10s"
-        GasOffset = 150000
-        SettlementBackend = "agglayer"
-        [Aggregator.DB]
-                Name = "{{.aggregator_db.name}}"
-                User = "{{.aggregator_db.user}}"
-                Password = "{{.aggregator_db.password}}"
-                Host = "{{.aggregator_db.hostname}}"
-                Port = "{{.aggregator_db.port}}"
-                EnableLog = false
-                MaxConns = 200
        
 [AggSender]
-CertificateSendInterval = "1m"
-CheckSettledInterval = "5s"
 SaveCertificatesToFilesPath = "{{.zkevm_path_rw_data}}/"
-
-
+CheckStatusCertificateInterval = "1s"
+	[AggSender.MaxSubmitCertificateRate]
+		NumRequests = 20
+		Interval = "1m"
