ci: only run bridge tests in pos ci

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -40,11 +40,11 @@ jobs:
           - package: kurtosis-polygon-pos
             version: v1.0.5
             args_file: .github/tests/heimdall-bor-multi-validators.yml
-            filter_tags: pos
+            filter_tags: pos,bridge
           - package: kurtosis-polygon-pos
             version: v1.0.5
             args_file: .github/tests/heimdall-v2-bor-multi-validators.yml
-            filter_tags: pos
+            filter_tags: pos,bridge
 
     runs-on: ubuntu-latest
     timeout-minutes: 30
