--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -99,7 +99,7 @@ jobs:
         run: ./core/helpers/setup-kurtosis.sh "${{ matrix.package }}" "${{ matrix.version }}" "${{ matrix.args_file }}"
 
       - name: Run e2e tests
-        run: bats --filter-tags=${{ matrix.filter_tags }} --recursive tests/
+        run: bats --filter-tags ${{ matrix.filter_tags }} --recursive tests/
 
       - name: Dump enclave logs
         if: always()
