--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -63,7 +63,7 @@ on:
         default: ""
 
 jobs:
-  run-kurtosis-image:
+  test-cdk-e2e:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout agglayer-e2e
@@ -161,7 +161,7 @@ jobs:
       - name: Generate archive name
         if: ${{ failure() }}
         run: |
-          archive_name="dump_run_with_args_${{matrix.e2e-group}}_${{ github.run_id }}"
+          archive_name="dump_run_with_args_${{ github.run_id }}"
           echo "ARCHIVE_NAME=${archive_name}" >> "$GITHUB_ENV"
           echo "Generated archive name: ${archive_name}"
   
