--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   call-cdk-e2e:
     uses: ./.github/workflows/cdk-e2e.yml
+    with:
+      kurtosis-cdk-enclave-name: aggkit
 
   test-e2e:
     strategy:
