--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -134,10 +134,11 @@ jobs:
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
           export PROJECT_ROOT="$PWD"
           export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
-          export DISABLE_L2_FUND="false"
           if [[ $ENCLAVE == "op" ]]; then
+              export DISABLE_L2_FUND="false"
               bats ./tests/aggkit/bridge-e2e.bats
           else
+              export DISABLE_L2_FUND="true"
               bats ./tests/aggkit/bridge-e2e-custom-gas.bats ./tests/aggkit/bridge-e2e.bats
           fi
           popd
