--- a/.github/workflows/agglayer-e2e.yml
+++ b/.github/workflows/agglayer-e2e.yml
@@ -1,6 +1,10 @@
 name: Configurable E2E Execution
 run-name: Run Kurtosis CDK E2E test on ${{ inputs.kurtosis_cdk_ref }} by @${{ github.actor }}
 
+permissions:
+  contents: read
+  packages: read
+
 # TODO solve for remote callers setting bats environment variables
 # act --container-options "--group-add $(stat -c %g /var/run/docker.sock)" -s GITHUB_TOKEN=$ACT_GITHUB_TOKEN workflow_call
 on:
@@ -146,6 +150,7 @@ jobs:
         run: |
           pushd agglayer-e2e || exit 1
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
+          export KURTOSIS_ENCLAVE_NAME="cdk"
           bats tests/agglayer/bridges.bats --filter-tags agglayer
           popd
 
