--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -144,7 +144,7 @@ jobs:
           export PROJECT_ROOT="$PWD"
           export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
           export DISABLE_L2_FUND="true"
-          bats tests/cdk
+          bats tests/cdk/bridge-e2e.bats
           popd
 
       - name: Dump enclave logs
