--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -6,28 +6,26 @@ on:
     inputs:
       kurtosis-cdk-ref:
         description: "The tag, branch, or commit of the kurtosis-cdk package that will be used"
-        required: false
+        required: true
         type: string
-        default: ""
 
       agglayer-e2e-ref:
         description: "The tag, branch, or commit of the agglayer/e2e repo that will used for running tests"
-        required: false
+        required: true
         type: string
-        default: ${{ github.ref }}
 
       kurtosis-cdk-args:
         description: "Input arguments for the Kurtosis CDK package."
-        required: false
+        required: true
         type: string
         default: |
           {}
 
       kurtosis-cdk-enclave-name:
         description: "The name to be used for the kurtosis enclave"
-        required: false
+        required: true
         type: string
-        default: "cdk"
+        default: ""
 
       docker-image-override:
         description: "The docker image in kurtosis that will replaced with a local tag (e.g. agglayer_image)"
@@ -39,13 +37,13 @@ on:
         description: "A local docker tag to be used as the image for a particular service in kurtosis (e.g. agglayer:local)"
         required: false
         type: string
-        default: ""
+        default: "local"
 
       docker-artifact-name:
         description: "A name of a docker image to download (e.g. docker-image)"
         required: false
         type: string
-        default: ""
+        default: "aggkit"
 
       test-name:
         description: "Name of test"
