--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -145,6 +145,8 @@ jobs:
           export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
           export DISABLE_L2_FUND="true"
           bats tests/cdk
+          bats tests/aggkit/bridge-e2e.bats
+          bats tests/aggkit/bridge-e2e-custom-gas.bats
           popd
 
       - name: Dump enclave logs
